<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MainActivity">

    <data>

        <variable
            name="row"
            type="com.kestrel9.android.mystudykotlin.viewmodel.RowViewModel"/>

        <variable
            name="ticker"
            type="com.kestrel9.android.mystudykotlin.viewmodel.TickerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorAskBg">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_ask"
                    replaceAll="@{row.ask}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_ask" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_last" />

                <TextView
                    android:id="@+id/tv_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%,d",ticker.model.last)}'
                    tools:text="7,134,500" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_first" />

                <TextView
                    android:id="@+id/tv_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%,d",ticker.model.first)}'
                    tools:text="7,134,500" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_rate_before" />

                <TextView
                    android:id="@+id/tv_rate_before"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%+,d \n %+.2f%%",(ticker.model.last - ticker.model.first),(Double.valueOf((ticker.model.last - ticker.model.first)) * 100 / ticker.model.first))}'
                    tools:text="+7,134,500\n+0.099" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_high" />

                <TextView
                    android:id="@+id/tv_high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%,d",ticker.model.high)}'
                    tools:text="7,134,500" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_low" />

                <TextView
                    android:id="@+id/tv_low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%,d",ticker.model.low)}'
                    tools:text="7,134,500" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ticker_volume" />

                <TextView
                    android:id="@+id/tv_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text='@{String.format("%,.0f",ticker.model.volume)}'
                    tools:text="500" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_order"
                    replaceAll="@{row.completeOrder}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_order" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/colorBidBg">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_bid"
                    replaceAll="@{row.bid}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/row_bid" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>